# stezya

./: .gitignore  Cargo.toml  shell.nix
stezya/: Cargo.toml
stezya-core/: Cargo.toml
stezya-core/src/: lib.rs  world.rs
stezya-core/src/components/: harvester.rs  hp.rs  mass.rs  mod.rs  vel.rs
stezya-core/src/systems/: harvester.rs
stezya/src/: audio.rs  main.rs
stezya/src/render/: components.rs  mod.rs  system.rs
stezya/src/render/components/: mod.rs  renderdelta.rs  spriteview.rs  windowsize.rs
stezya/src/render/systems/: render.rs  spritetest.rs
