[package]
name = "stezya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.4.0"
sdl2 = { version = "0.35.2", features = [ "mixer", "image" ] }
crossbeam = "0.8.1"
stezya-core = { path = "../stezya-core" }

[features]
default = ["trace-fps"]
trace-fps = []